# patchelf

./: .gitignore  Cargo.toml  default.nix  overlay.nix  shell.nix
src/: elf.rs  main.rs
src/elf/file/: mod.rs
src/endian/: mod.rs
