[package]
name = "patchelf"
version = "0.11.0"
authors = ["Farid Zakaria <farid.m.zakaria@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getopts = "0.2"
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.3.4"

